syntax = "proto3";
package grpc;
option go_package = "/grpc";
import "google/api/annotations.proto";

message Empty {

}

message Id {
  int32 id = 1;
}

message ListRequest {
  uint32 limit = 1;
  uint32 offset = 2;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 organization_id = 4;
  int32 tariff_id = 5;
  Organization organization = 6;
  repeated Permission permissions = 7;
}

message Permission {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
}

message Role {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
  repeated Permission permissions = 5;
}

message PermissionCreateRequest {
  string name = 1;
  string code = 2;
  string description = 3;
}

message RoleCreateRequest {
  string name = 1;
  string code = 2;
  string description = 3;
}

message RoleUpdateRequest {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
}

message RolesResponse {
  repeated Role data = 1;
}

message UserPermissionsRequest {
  int32 id = 1;
  repeated int32 permission_ids = 2;
}

message UserRolesRequest {
  int32 id = 1;
  repeated int32 role_ids = 2;
}

message OrganizationRolesRequest {
  int32 id = 1;
  repeated int32 role_ids = 2;
}

message TariffRolesRequest {
  int32 id = 1;
  repeated int32 role_ids = 2;
}

message OrganizationPermissionsRequest {
  int32 id = 1;
  repeated int32 permission_ids = 2;
}

message RolePermissionsRequest {
  int32 id = 1;
  repeated int32 permission_ids = 2;
}

message RolePermissionsResponse {
  repeated Permission data = 1;
}

message Tariff {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  repeated Role roles = 5;
}

message UserTariffRequest {
  int32 id = 1;
  int32 tariff_id = 2;
}

message UserTariffResponse {
  Tariff tariff = 1;
}

message OrganizationTariffRequest {
  int32 id = 1;
  int32 tariff_id = 2;
}

message OrganizationTariffResponse {
  Tariff tariff = 1;
}

message TariffCreateRequest {
  string name = 1;
  string description = 2;
  int32 price = 3;
}

message TariffUpdateRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
}

message TariffsResponse {
  repeated Tariff data = 1;
}

message PermissionUpdateRequest {
  int32 id = 1;
  string name = 2;
  string code = 3;
  string description = 4;
}

message PermissionsResponse {
  repeated Permission data = 1;
}

message GetUserResponse {
  User user = 1;
  Organization organization = 2;
}

message UserCreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  int32 organization_id = 4;
}

message UserUpdateRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int32 organization_id = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message UsersResponse {
  repeated User data = 1;
}

message Organization {
  int32 id = 1;
  string name = 2;
  int32 tariff_id = 3;
  repeated Permission permissions = 4;
}

message OrganizationCreateRequest {
  string name = 1;
}

message OrganizationUpdateRequest {
  int32 id = 1;
  string name = 2;
}

message OrganizationsResponse {
  repeated Organization data = 1;
}

service CrudService {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  }

  // User CRUD operations
  rpc GetUsers (ListRequest) returns (UsersResponse) {
    option (google.api.http) = {
      get: "/api/users"
    };
  }
  rpc CreateUser (UserCreateRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/users"
      body: "*"
    };
  }
  rpc GetUser (Id) returns (User) {
    option (google.api.http) = {
      get: "/api/user/{id}"
    };
  }
  rpc UpdateUser (UserUpdateRequest) returns (User) {
    option (google.api.http) = {
      put: "/api/user"
      body: "*"
    };
  }
  rpc DeleteUser (Id) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/user/{id}"
    };
  }

  // User permissions operations
  rpc AddUserPermissions (UserPermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/user/{id}/permissions/add"
      body: "*"
    };
  }
  rpc DeleteUserPermissions (UserPermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/user/{id}/permissions/delete"
      body: "*"
    };
  }

  // User roles operations
  rpc AddUserRoles (UserRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/user/{id}/roles/add"
      body: "*"
    };
  }
  rpc DeleteUserRoles (UserRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/user/{id}/roles/delete"
      body: "*"
    };
  }

  // User tariff operations
  rpc AddUserTariff (UserTariffRequest) returns (UserTariffResponse) {
    option (google.api.http) = {
      post: "/api/user/{id}/tariff"
      body: "*"
    };
  }
  rpc UpdateUserTariff (UserTariffRequest) returns (UserTariffResponse) {
    option (google.api.http) = {
      put: "/api/user/{id}/tariff"
      body: "*"
    };
  }
  rpc DeleteUserTariff (UserTariffRequest) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/user/{id}/tariff"
    };
  }

  // Organization CRUD operations
  rpc GetOrganizations (ListRequest) returns (OrganizationsResponse) {
    option (google.api.http) = {
      get: "/api/organizations"
    };
  }
  rpc CreateOrganization (OrganizationCreateRequest) returns (Organization) {
    option (google.api.http) = {
      post: "/api/organizations"
      body: "*"
    };
  }
  rpc GetOrganization (Id) returns (Organization) {
    option (google.api.http) = {
      get: "/api/organization/{id}"
    };
  }
  rpc UpdateOrganization (OrganizationUpdateRequest) returns (Organization) {
    option (google.api.http) = {
      put: "/api/organization"
      body: "*"
    };
  }
  rpc DeleteOrganization (Id) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/organization/{id}"
    };
  }

  // Organization permissions operations
  rpc AddOrganizationPermissions (OrganizationPermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/organization/{id}/permissions/add"
      body: "*"
    };
  }
  rpc DeleteOrganizationPermissions (OrganizationPermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/organization/{id}/permissions/delete"
      body: "*"
    };
  }

  // Organization roles operations
  rpc AddOrganizationRoles (OrganizationRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/organization/{id}/roles/add"
      body: "*"
    };
  }
  rpc DeleteOrganizationRoles (OrganizationRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/organization/{id}/roles/delete"
      body: "*"
    };
  }

  // Organization tariff operations
  rpc AddOrganizationTariff (OrganizationTariffRequest) returns (OrganizationTariffResponse) {
    option (google.api.http) = {
      post: "/api/organization/{id}/tariff"
      body: "*"
    };
  }
  rpc UpdateOrganizationTariff (OrganizationTariffRequest) returns (OrganizationTariffResponse) {
    option (google.api.http) = {
      put: "/api/organization/{id}/tariff"
      body: "*"
    };
  }
  rpc DeleteOrganizationTariff (OrganizationTariffRequest) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/organization/{id}/tariff"
    };
  }

  // Permission CRUD operations
  rpc GetPermissions (ListRequest) returns (PermissionsResponse) {
    option (google.api.http) = {
      get: "/api/permissions"
    };
  }
  rpc CreatePermission (PermissionCreateRequest) returns (Permission) {
    option (google.api.http) = {
      post: "/api/permissions"
      body: "*"
    };
  }
  rpc GetPermission (Id) returns (Permission) {
    option (google.api.http) = {
      get: "/api/permission/{id}"
    };
  }
  rpc UpdatePermission (PermissionUpdateRequest) returns (Permission) {
    option (google.api.http) = {
      put: "/api/permission"
      body: "*"
    };
  }
  rpc DeletePermission (Id) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/permission/{id}"
    };
  }

  // Role CRUD operations
  rpc GetRoles (ListRequest) returns (RolesResponse) {
    option (google.api.http) = {
      get: "/api/roles"
    };
  }
  rpc CreateRole (RoleCreateRequest) returns (Role) {
    option (google.api.http) = {
      post: "/api/roles"
      body: "*"
    };
  }
  rpc GetRole (Id) returns (Role) {
    option (google.api.http) = {
      get: "/api/role/{id}"
    };
  }
  rpc UpdateRole (RoleUpdateRequest) returns (Role) {
    option (google.api.http) = {
      put: "/api/role"
      body: "*"
    };
  }
  rpc DeleteRole (Id) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/role/{id}"
    };
  }

  // Role permissions operations
  rpc AddRolePermissions (RolePermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/role/{id}/permissions/add"
      body: "*"
    };
  }

  rpc DeleteRolePermissions (RolePermissionsRequest) returns (RolePermissionsResponse) {
    option (google.api.http) = {
      post: "/api/role/{id}/permissions/delete"
      body: "*"
    };
  }

  // Tariff CRUD operations
  rpc GetTariffs (ListRequest) returns (TariffsResponse) {
    option (google.api.http) = {
      get: "/api/tariffs"
    };
  }
  rpc CreateTariff (TariffCreateRequest) returns (Tariff) {
    option (google.api.http) = {
      post: "/api/tariffs"
      body: "*"
    };
  }
  rpc GetTariff (Id) returns (Tariff) {
    option (google.api.http) = {
      get: "/api/tariff/{id}"
    };
  }
  rpc UpdateTariff (TariffUpdateRequest) returns (Tariff) {
    option (google.api.http) = {
      put: "/api/tariff"
      body: "*"
    };
  }
  rpc DeleteTariff (Id) returns (Empty) {
    option (google.api.http) = {
      delete: "/api/tariff/{id}"
    };
  }

  // Tariff roles operations
  rpc AddTariffRoles (TariffRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/tariff/{id}/roles/add"
      body: "*"
    };
  }
  rpc DeleteTariffRoles (TariffRolesRequest) returns (RolesResponse) {
    option (google.api.http) = {
      post: "/api/tariff/{id}/roles/delete"
      body: "*"
    };
  }
}